# kde2-kdegraphics

./: CMakeLists.txt  Makefile.am  README  config.h.in
bsd-port/: Makefile
cmake/: kde2_configure.cmake
debian/: changelog  control  copyright  debian.diff  kamera.files  kcolorchooser.sgml  kcoloredit.files  kcoloredit.manpages  kcoloredit.menu  kcoloredit.override  kcoloredit.sgml  kdvi.sgml  kfax.sgml  kfract.dirs  kfract.docs  kfract.files  kfract.manpages  kfract.menu  kfract.sgml  kghostview.docs  kghostview.files  kghostview.manpages  kghostview.menu  kghostview.mime  kghostview.override  kghostview.sgml  kghostview.shlibs  kiconedit.docs  kiconedit.files  kiconedit.manpages  kiconedit.menu  kiconedit.sgml  kooka.config  kooka.docs  kooka.files  kooka.manpages  kooka.menu  kooka.postinst  kooka.sgml  kooka.templates  (+28 more)
doc/kfract/: index.docbook
doc/kghostview/: index.docbook
doc/kiconedit/: index.docbook
doc/kpaint/: index.docbook
doc/kview/: index.docbook
kamera/kioslave/: Makefile.am
kcoloredit/: CMakeLists.txt
kfax/: Makefile.am  about.cpp  about.h  fax-g3.desktop  fax2ps.c  fax2tiff.c  faxexpand.cpp  faxexpand.h  faxinput.cpp  kfax.cpp  kfax.desktop  kfax.h  options.cpp  options.h  print.cpp  print.h  viewfax.cpp  viewfax.h
kfax/libtiffax/: Makefile.am  port.h
kfaxview/: Makefile.am  kfax  kfax.desktop  kfax_multipage.cpp  kfax_multipage.h  kfax_part.rc  tiffsplit.c
kfract/: Makefile.am  drawview.C  drawview.h  fract.C  kfract-0.1.2.lsm  kfract.C  kfract.desktop  kfract.h  kfract.rc  kfractdlgs.C  kfractdlgs.h  main.C  mandel.C
kghostview/: Makefile.am  README  TODO  gotodialog.cpp  gotodialog.h  infodialog.cpp  infodialog.h  kdsc.cpp  kdsc.h  kghostview.desktop  kghostviewui.rc  kgv.h  kgv_miniwidget.cpp  kgv_miniwidget.h  kgv_part.rc  kgv_view.cpp  kgv_view.h  kgvconfigdialog.cpp  kgvconfigdialog.h  kgvmainwidget.cpp  kgvmainwidget.h  kgvpagedecorator.cpp  kgvpagedecorator.h  kgvpageview.cpp  kgvpageview.h  kgvshell.cpp  kgvshell.h  kmaybe.h  kpswidget.cpp  kpswidget.h  main.cpp  marklist.cpp  marklist.h  messages.cpp  messages.h  ps.c  ps.h  scrollbox.cpp  scrollbox.h  version.h  (+2 more)
kghostview/data/: Makefile.am
kiconedit/: Makefile.am  kcolorgrid.cpp  kcolorgrid.h  kicon.cpp  kicon.h  kiconcolors.cpp  kiconcolors.h  kiconconfig.cpp  kiconconfig.h  kiconedit.cpp  kiconedit.desktop  kiconedit.h  kiconeditslots.cpp  kicongrid.cpp  kicongrid.h  kicontools.cpp  kicontools.h  knew.cpp  knew.h  knotebook.cpp  knotebook.h  kresize.cpp  kresize.h  ktabbar.cpp  ktabbar.h  kwizard.cpp  kwizard.h  main.cpp  main.h  properties.cpp  properties.h  utils.cpp  utils.h
kiconedit/pics/icons/: Makefile.am
kiconedit/pics/toolbar/: Makefile.am  aim-cursor.xpm  paintbrush-cursor.xpm
kooka/: ksaneocr.cpp  miscwidgets.h  scanpackager.cpp
kpaint/: CHANGES  CMakeLists.txt  Makefile.am  README  areaselect.cpp  areaselect.h  brush.cpp  brush.h  canvas.cpp  canvas.h  canvassize.cpp  canvassize.h  circle.cpp  circle.h  commands.h  depthdialog.cpp  depthdialog.h  ellipse.cpp  ellipse.h  infodialog.cpp  infodialog.h  kpaint.cpp  kpaint.desktop  kpaint.h  kpaint.rc  kundo.cpp  kundo.h  line.cpp  line.h  main.cpp  mainview.cpp  mainview.h  manager.cpp  manager.h  navwidget.cpp  palette.cpp  palette.h  palettedialog.cpp  palettedialog.h  pen.cpp  (+14 more)
kpaint/toolpics/: Makefile.am  brush.xpm
kruler/: CMakeLists.txt  klineal.cpp
kruler/pics/: CMakeLists.txt
ksnapshot/: CMakeLists.txt
kview/: AUTHORS  CMakeLists.txt  Makefile.am  README  TODO  canvas.cpp  canvas.h  colour.cpp  colour.h  filter.cpp  filter.h  filtlist.cpp  filtlist.h  imagelistdialog.cpp  imagelistdialog.h  imagelistdialog_base.ui  infowin.cpp  infowin.h  infowin_base.ui  kcproc.cpp  kcproc.h  kfilteraction.cpp  kfilteraction.h  knumdialog.cpp  knumdialog.h  knumdialog_base.ui  kview.cpp  kview.desktop  kview.h  kview_asyncio.cc  kview_asyncio.h  kview_part.rc  kview_view.cc  kview_view.h  kviewconfdialog.cpp  kviewconfdialog.h  kviewconfdialog_base.ui  kviewui.rc  main.cpp  version.h  (+2 more)
kview/pics/: Makefile.am
kviewshell/: CMakeLists.txt  Makefile.am  TODO  centeringScrollview.cpp  centeringScrollview.h  gotodialog.cpp  kmultipage.cpp  kmultipage.h  kpagetest.cpp  kpagetest.h  kviewerpart.rc  kviewpart.cpp  kviewpart.h  kviewshell.cpp  kviewshell.h  kviewshell.rc  main.cpp  marklist.cpp  marklist.h  paper-formats  scrollbox.cpp  scrollbox.h
libkscan/: img_canvas.cpp  img_canvas.h  imgscaledialog.cpp  imgscaledialog.h  kscandevice.h  kscandoc.h  kscanoption.cpp  kscanoption.h  kscanoptset.cpp  kscanoptset.h
libminimagick/: CMakeLists.txt  Makefile.am  README.MINIMAGICK  REMOVED_FILES  VERSION  annotate.c  configure.in.in  magick.c  utility.c
libminimagick/mini-magick/: Makefile.am  api.h  image.h  magick.h  xwindows.h
pixie/: CMakeLists.txt  Makefile.am  bigwindow.cpp  bigwindow.h  dndlistbox.cpp  dndlistbox.h  htmlexport.cpp  htmlexport.h  ifapp.cpp  ifapp.h  imagelist.cpp  imagelist.h  imagelistitem.cpp  imagelistitem.h  imagewindow.cpp  imagewindow.h  main.cpp  miscbindings.cpp  miscbindings.h  moviewindow.cpp  moviewindow.h  pixie.desktop  pluginmenu.cpp  pluginmenu.h  screengrab.cpp  screengrab.h  sizedialog.cpp  sizedialog.h  slidedialog.cpp  slidedialog.h
pixie/color/: CMakeLists.txt  Makefile.am  channeledit.cpp  channeledit.h  dualimagergb.cpp  dualimagergb.h  imagehsv.cpp  imagehsv.h  init.cpp  init.h  singlecolors.cpp  singlecolors.h  widgets.cpp  widgets.h
pixie/libifplugin/: CMakeLists.txt  Makefile.am  ifplugin.cpp  ifplugin.h
pixie/pics/: CMakeLists.txt  Makefile.am
pixie/plugins/: CMakeLists.txt  Makefile.am
pixie/plugins/kde/: CMakeLists.txt  Makefile.am  dialogs.cpp  dialogs.h  effects.cpp  kdeeffects.desktop
pixie/plugins/magick/: CMakeLists.txt  Makefile.am  bindings.h  dialog.cpp  dialog.h  magick.cpp  magick.desktop
pixie/thumbnails/: CMakeLists.txt  Makefile.am  hotlistbox.cpp  hotlistbox.h  thumbiconview.cpp  thumbiconview.h  thumbpreview.cpp  thumbpreview.h  thumbpropsdlg.cpp  thumbpropsdlg.h  thumbtoplevel.cpp  thumbtoplevel.h  thumbtree.cpp  thumbtree.h
