
pics_DATA =logo.png progress1.png progress2.png inc2.png inc2high.png \
	dec2.png dec2high.png thumbwallpaper.png
toolbar_DATA = back.png   brightness+.png  forward.png  stop.png \
	brightness-.png play.png scaleup.png scaledown.png contrast+.png \
	contrast-.png fliph.png flipv.png thumb.png \
	mini-run.png mini-ray.png kwin.png
picsdir = $(kde_datadir)/pixie
toolbardir = $(kde_datadir)/pixie/toolbar

EXTRA_DIST = $(pics_DATA) 

KDE_ICON = pixie