toolbar_DATA =	fileclose.png \
	circle.png \
	filledcircle.png \
	line.png \
	paintbrush-cursor.xpm \
	paintbrush.png \
   	spraycan.png \
    spraycan-cursor.xpm \
	ellipse.png \
	filledellipse.png \
	rectangle.png \
	filledrectangle.png \
	areaselect.png \
	selectrect.png \
	selectcircle.png \
	flood.png \
    flood-cursor.xpm \
	grid.png \
	pointer.png \
	aim.png \
    aim-cursor.xpm \
	newwin.png \
	grayscale.png \
	kdepalette.png \
	transform.png \
    eraser-cursor.xpm
    
    

toolbardir = $(kde_datadir)/kiconedit/toolbar
